# synsplore

./: .gitignore  README.md  pyproject.toml  run.sh
configs/: config.yaml  main.yaml  prepare.yaml  roufeats.yaml
configs/data/: default.yaml  molfeats.yaml  rxnfeats.yaml  sample.yaml
configs/model/: default.yaml
configs/train/: default.yaml
notebooks/: test_data.ipynb  test_out.ipynb
synsplore/: cli.py
synsplore/dataset/: __init__.py  data.py  dataset.py  transforms.py  utils.py
synsplore/model/: blocks.py  classifier.py  main.py  syn.py  synsplore.py
synsplore/model/blocks/: act.py  loss.py  mlp.py  tfmer.py  utils.py  vae.py
synsplore/scripts/: featurize.py  inference.py  main.py  prepare.py  sample.py  train.py  utils.py
synsplore/scripts/data/: __init__.py  featurize_routes.py  initiate_stores.py  profile_products.py  sample_routes.py
synsplore/train/: training.py
synsplore/utils/: metrics.py
